# GameDevelopmentBenchmark

./: .gitignore  BASELINE.md  BUG.md  DESIGN.md  PLAN.md  README.md  RESUME.md  pyproject.toml  requirements.txt  validate_tests.py
.github/workflows/: benchmark.yml  ci.yml
baselines/: __init__.py
baselines/pygame/: __init__.py
baselines/pygame/asteroids/: main.py
baselines/pygame/asteroids/tests/: __init__.py  test_asteroids.py
baselines/pygame/breakout/: __init__.py  main.py
baselines/pygame/breakout/tests/: __init__.py  test_breakout.py
baselines/pygame/platformer/tests/: __init__.py  test_platformer.py
baselines/pygame/pong/: __init__.py
baselines/pygame/pong/tests/: test_pong.py
baselines/pygame/snake/: __init__.py
baselines/pygame/snake/tests/: __init__.py  test_snake.py
baselines/pygame/space_invaders/tests/: __init__.py  test_space_invaders.py
baselines/pygame/tetris/tests/: __init__.py  test_tetris.py
baselines/pygame/tower_defense/tests/: __init__.py  test_tower_defense.py
baselines/quake/: README.md
evaluation/: __init__.py  asan_parser.py  c_parser.py  c_test_runner.py  gameplay_bot.py  julius_evaluator.py  julius_test_runner.py  performance.py  report.py  runner.py  test_runner.py
harness/: __init__.py  c_sandbox.py  julius_sandbox.py  metrics.py  patch_utils.py  pygame_headless.py  sandbox.py
leaderboard/: index.html
models/: __init__.py  api_model.py  base.py  cli_model.py
results/baselines/: julius_haiku_baseline.md
schemas/: task_schema.json
scripts/: __init__.py  create_task.py  generate_m2_tasks.py  generate_m2_tasks_batch2.py  generate_m2_tasks_batch3.py  run_benchmark.py  test_quake_tasks.sh  validate_task.py
tasks/julius/crash-fix/julius-023/: buggy.patch  prompt.md  task.json
tasks/julius/crash-fix/julius-024/: buggy.patch  prompt.md  task.json
tasks/julius/crash-fix/julius-025/: buggy.patch  prompt.md  task.json
tasks/julius/crash-fix/julius-026/: buggy.patch  prompt.md  task.json
tasks/julius/crash-fix/julius-027/: buggy.patch  prompt.md  task.json
tasks/julius/crash-fix/julius-028/: buggy.patch  prompt.md  task.json
tasks/julius/crash-fix/julius-029/: buggy.patch  prompt.md  task.json
tasks/julius/crash-fix/julius-030/: buggy.patch  prompt.md  task.json
tests/: __init__.py
tests/evaluation/: test_julius_evaluator.py
tests/harness/: __init__.py  test_sandbox.py
tests/models/: test_base.py
(+1068 files in other folders)
