[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "game-development-benchmark"
version = "0.1.0"
description = "A benchmark for evaluating AI models on game development tasks"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Game Development Benchmark Team"}
]
keywords = ["benchmark", "ai", "game-development", "pygame", "evaluation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pygame>=2.5.0",
    "pytest>=7.0.0",
    "pytest-timeout>=2.0.0",
    "httpx>=0.25.0",
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "psutil>=5.9.0",
    "pillow>=10.0.0",
    "jsonschema>=4.0.0",
    "click>=8.0.0",
    "jinja2>=3.0.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
gdb-run = "scripts.run_benchmark:main"
gdb-create-task = "scripts.create_task:main"
gdb-validate = "scripts.validate_task:main"

[project.urls]
Homepage = "https://github.com/game-development-benchmark"
Documentation = "https://github.com/game-development-benchmark/docs"
Repository = "https://github.com/game-development-benchmark"

[tool.setuptools.packages.find]
where = ["."]
include = ["evaluation*", "harness*", "models*", "scripts*", "baselines*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --timeout=60"
